<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.passwordgenerator.MainActivity"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:text="@string/label_for_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewForThread"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_password_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewThreadCount"
            android:layout_weight="0.61"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewThreadCountOutput"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarThreadCount"
        android:max="9"
        android:padding="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_password_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewThreadLength"
            android:layout_weight="0.66"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewThreadLengthOutput"
            android:layout_weight="1.10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarThreadLength"
        android:max="16"
        android:padding="5dp"/>

    <TextView
        android:text="@string/label_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_password_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pg_textViewARC"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar3"
        android:max="9"
        android:padding="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_password_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pg_textViewARL"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar4"
        android:max="16"
        android:padding="5dp"/>

    <Button
        android:text="@string/btn_Generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGenerate"
        android:padding="5dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>
